Add exsiccata endpoint (#545)
* Adds exsiccata endpoint. I believe I removed all changes from lichen. It's worth reviewing this again, though.
