# api/app/Http/Controllers/TaxonomyController.php
@@ -1,18 +1,19 @@
 <?php
+
 namespace App\Http\Controllers;
 
 use App\Models\Taxonomy;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
 
-class TaxonomyController extends Controller{
+class TaxonomyController extends Controller {
 
 	/**
 	 * Taxonomy controller instance.
 	 *
 	 * @return void
 	 */
-	public function __construct(){
+	public function __construct() {
 		parent::__construct();
 	}
 
@@ -46,13 +47,13 @@ class TaxonomyController extends Controller{
 	 *	 ),
 	 * )
 	 */
-	public function showAllTaxa(Request $request){
+	public function showAllTaxa(Request $request) {
 		$this->validate($request, [
 			'limit' => 'integer',
 			'offset' => 'integer'
 		]);
-		$limit = $request->input('limit',100);
-		$offset = $request->input('offset',0);
+		$limit = $request->input('limit', 100);
+		$offset = $request->input('offset', 0);
 
 		$fullCnt = Taxonomy::count();
 		$result = Taxonomy::skip($offset)->take($limit)->get();
@@ -116,30 +117,27 @@ class TaxonomyController extends Controller{
 	 *	 ),
 	 * )
 	 */
-	public function showAllTaxaSearch(Request $request){
+	public function showAllTaxaSearch(Request $request) {
 		$this->validate($request, [
 			'taxon' => 'required',
 			'limit' => 'integer',
 			'offset' => 'integer'
 		]);
-		$limit = $request->input('limit',100);
-		$offset = $request->input('offset',0);
+		$limit = $request->input('limit', 100);
+		$offset = $request->input('offset', 0);
 
 		$type = $request->input('type', 'EXACT');
 
 		$taxaModel = Taxonomy::query();
-		if($type == 'START'){
+		if ($type == 'START') {
 			$taxaModel->where('sciname', 'LIKE', $request->taxon . '%');
-		}
-		elseif($type == 'WILD'){
+		} elseif ($type == 'WILD') {
 			$taxaModel->where('sciname', 'LIKE', '%' . $request->taxon . '%');
-		}
-		elseif($type == 'WHOLEWORD'){
+		} elseif ($type == 'WHOLEWORD') {
 			$taxaModel->where('unitname1', $request->taxon)
-			->orWhere('unitname2', $request->taxon)
-			->orWhere('unitname3', $request->taxon);
-		}
-		else{
+				->orWhere('unitname2', $request->taxon)
+				->orWhere('unitname3', $request->taxon);
+		} else {
 			//Exact match
 			$taxaModel->where('sciname', $request->taxon);
 		}
@@ -181,21 +179,21 @@ class TaxonomyController extends Controller{
 	 *	 ),
 	 * )
 	 */
-	public function showOneTaxon($id, Request $request){
+	public function showOneTaxon($id, Request $request) {
 		$taxonObj = Taxonomy::find($id);
 
 		//Set status and parent (can't use Eloquent model due to table containing complex PKs)
 		$taxStatus = DB::table('taxstatus as s')
-		->select('s.parentTid', 's.taxonomicSource', 's.unacceptabilityReason', 's.notes', 'a.tid', 'a.sciname', 'a.author')
-		->join('taxa as a', 's.tidAccepted', '=', 'a.tid')
-		->where('s.tid', $id)->where('s.taxauthid', 1);
+			->select('s.parentTid', 's.taxonomicSource', 's.unacceptabilityReason', 's.notes', 'a.tid', 'a.sciname', 'a.author')
+			->join('taxa as a', 's.tidAccepted', '=', 'a.tid')
+			->where('s.tid', $id)->where('s.taxauthid', 1);
 		$taxStatusResult = $taxStatus->get();
 		$taxonObj->parentTid = $taxStatusResult[0]->parentTid;
 
 		//Set Status
-		if($id == $taxStatusResult[0]->tid){
+		if ($id == $taxStatusResult[0]->tid) {
 			$taxonObj->status = 'accepted';
-		}else{
+		} else {
 			$taxonObj->status = 'synonym';
 			$accepted = [];
 			$accepted['tid'] = $taxStatusResult[0]->tid;
@@ -209,92 +207,30 @@ class TaxonomyController extends Controller{
 
 		//Set parent
 		$parStatus = DB::table('taxaenumtree as e')
-		->select('p.tid', 'p.sciname as scientificName', 'p.author', 'p.rankid')
-		->join('taxa as p', 'e.parentTid', '=', 'p.tid')
-		->where('e.tid', $id)->where('e.taxauthid', 1);
+			->select('p.tid', 'p.sciname as scientificName', 'p.author', 'p.rankid')
+			->join('taxa as p', 'e.parentTid', '=', 'p.tid')
+			->where('e.tid', $id)->where('e.taxauthid', 1);
 		$parStatusResult = $parStatus->get();
 		$taxonObj->classification = $parStatusResult;
 
-		if(!$taxonObj->count()) $taxonObj = ['status' =>false, 'error' => 'Unable to locate inventory based on identifier'];
+		if (!$taxonObj->count()) $taxonObj = ['status' => false, 'error' => 'Unable to locate inventory based on identifier'];
 		return response()->json($taxonObj);
 	}
 
-	/**
-	 * @OA\Get(
-	 *	 path="/api/v2/taxonomy/{identifier}/description",
-	 *	 operationId="/api/v2/taxonomy/identifier/description",
-	 *	 tags={""},
-	 *	 @OA\Parameter(
-	 *		 name="identifier",
-	 *		 in="path",
-	 *		 description="PK, GUID, or recordID associated with target taxonomic unit",
-	 *		 required=true,
-	 *		 @OA\Schema(type="string")
-	 *	 ),
-	 *	 @OA\Parameter(
-	 *		 name="limit",
-	 *		 in="query",
-	 *		 description="Controls the number of results in the page.",
-	 *		 required=false,
-	 *		 @OA\Schema(type="integer", default=100)
-	 *	 ),
-	 *	 @OA\Parameter(
-	 *		 name="offset",
-	 *		 in="query",
-	 *		 description="Determines the starting point for the search results. A limit of 100 and offset of 200, will display 100 records starting the 200th record.",
-	 *		 required=false,
-	 *		 @OA\Schema(type="integer", default=0)
-	 *	 ),
-	 *	 @OA\Response(
-	 *		 response="200",
-	 *		 description="Returns list of taxonomic descriptions for a given taxon",
-	 *		 @OA\JsonContent()
-	 *	 ),
-	 *	 @OA\Response(
-	 *		 response="400",
-	 *		 description="Error: Bad request. ",
-	 *	 ),
-	 * )
-	 */
-	public function showAllDescriptions($id, Request $request){
-		$this->validate($request, [
-				'limit' => 'integer',
-				'offset' => 'integer'
-		]);
-		$limit = $request->input('limit',100);
-		$offset = $request->input('offset',0);
-
-		$descriptionObj = Taxonomy::find($id)->descriptions();
-		//$descriptionObj->statement;
-		$fullCnt = $descriptionObj->count();
-		$result = $descriptionObj->skip($offset)->take($limit)->get();
-		//Add statements
-		//$result->statement = DB::table('taxadescrstmts')->where('tdbid', $id)->get();
-
-		$eor = false;
-		$retObj = [
-			'offset' => (int)$offset,
-			'limit' => (int)$limit,
-			'endOfRecords' => $eor,
-			'count' => $fullCnt,
-			'results' => $result
-		];
-		return response()->json($retObj);
-	}
 
 	//Support functions
-	public static function getSynonyms(Int $tid){
+	public static function getSynonyms(Int $tid) {
 		$synonymResult = DB::table('taxstatus as ts')
-		->join('taxstatus as s', 'ts.tidaccepted', '=', 's.tidaccepted')
-		->where('ts.tid', $tid)->where('ts.taxauthid', 1)->where('s.taxauthid', 1)->pluck('s.tid');
+			->join('taxstatus as s', 'ts.tidaccepted', '=', 's.tidaccepted')
+			->where('ts.tid', $tid)->where('ts.taxauthid', 1)->where('s.taxauthid', 1)->pluck('s.tid');
 		return $synonymResult->toArray();
 	}
 
-	public static function getChildren(Int $tid){
+	public static function getChildren(Int $tid) {
 		//Direct accepted children only
 		$childrenResult = DB::table('taxstatus as c')
-		->join('taxstatus as a', 'c.parenttid', '=', 'a.tidaccepted')
-		->where('a.tid', $tid)->where('c.taxauthid', 1)->where('a.taxauthid', 1)->whereColumn('c.tid', 'c.tidaccepted')->pluck('c.tid');
+			->join('taxstatus as a', 'c.parenttid', '=', 'a.tidaccepted')
+			->where('a.tid', $tid)->where('c.taxauthid', 1)->where('a.taxauthid', 1)->whereColumn('c.tid', 'c.tidaccepted')->pluck('c.tid');
 		/*
 		SELECT c.tid
 		FROM taxstatus c INNER JOIN taxstatus a ON c.parenttid = a.tidaccepted
